Fix feedback styles on mobile

--- a/src/components/Feedback/styles.module.sass
+++ b/src/components/Feedback/styles.module.sass
@@ -4,8 +4,8 @@
     +position(fixed, 50% null null 50%)
     background-color: $brand-dark
     box-sizing: border-box
-    max-height: calc(100% - 36px)
-    max-width: 100%
+    max-height: calc(100% - 140px)
+    max-width: 80%
     opacity: 0
     padding: 20px 20px 30px
     pointer-events: none
